deploy/k8s/deployment.yaml
# golang-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facturacion-front
  template:
    metadata:
      labels:
        app: facturacion-front
    spec:
      containers:
      - name: facturacion-front
        image: gcr.io/taller-isw-2023s2/gcr-alpine:{GITHUB_SHA}
        ports:
        - containerPort: 5175
        resources:
          # You must specify requests for CPU to autoscale
          # based on CPU utilization
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
